# Blockchain-system

./: .gitignore  Makefile  pyproject.toml  pytest.ini  requirements.txt
blockchain-system/: blockchain.py  dispatcher.py  main.py  requirements.txt  services.py  subscriber.py
blockchain_system/: app.py  blockchain.py  blockchain_repository.py  cli.py  publisher.py  services.py  settings.py  signing_authority.py  subscriber.py  tasks.py
compariosn/: out_gauss.txt  out_rand.txt  out_uniform.txt
tests/: test_blockchain_repository.py  test_proof_of_stake.py  test_services.py  test_signing_authority.py
