[project]
name = "blockchain_system"
version = "0.0.1"
authors = [
  { name="Szymon Skoczylas", email="" },
  { name="Marcin Szadkowski", email="" },
]
description = "A simple blockchain system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
